--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^21.1.2",
+    "@angular/cdk": "^21.1.2",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/material": "^21.1.2",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "chart.js": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
